force-app/main/default/objects/Invoice_Payments__c/Invoice_Payments__c.object-meta.xml
<CustomObject>
    <label>Invoice Payments</label>
    <nameField>
        <displayFormat>Payment-{000000000}</displayFormat>
        <label>Payment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>