force-app/main/default/objects/Invoice_Payments__c/fields/Project_Cost__c.field-meta.xml
<CustomField>
    <fullName>Project_Cost__c</fullName>
    <formula>Project__r.Actual_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>